--- a/README
+++ b/README
@@ -101,3 +101,5 @@ version 1.34    Deleted DOI from doi numbers
 		The rulers in review mode now have continuous numbering
 
 version 1.35    Author-year bib style now uses square brackets.
+		Changed defaults for TOG sample
+		Price is suppressed for usgov and rightsretained modes.  
