--- a/README
+++ b/README
@@ -102,4 +102,5 @@ version 1.34    Deleted DOI from doi numbers
 
 version 1.35    Author-year bib style now uses square brackets.
 		Changed defaults for TOG sample
-		Price is suppressed for usgov and rightsretained modes.  
+		Price is suppressed for usgov and rightsretained modes.
+		Bugs fixed
