--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1509,7 +1509,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2017/04/22 v1.35 Typesetting articles for Association of
+[2017/04/23 v1.35 Typesetting articles for Association of
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -1561,6 +1561,7 @@ Computing Machinery]
 % \changes{v1.33}{2017/03/18}{BibTeX numpages bug corrected} 
 % \changes{v1.33}{2017/03/28}{Added acmart-preload-hook} 
 % \changes{v1.33}{2017/03/33}{Documentation updates} 
+% \changes{v1.35}{2017/04/23}{BibTeX bug fixed: et al.}
 %
 %
 % And the driver code:
