fixed italicized paragraphs in default mode

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -5276,6 +5276,10 @@ Computing Machinery]
   {-.5\baselineskip \@plus -2\p@ \@minus -.2\p@}%
   {-3.5\p@}%
   {\@subsubsecfont\@adddotafter}}
+\renewcommand\paragraph{\@startsection{paragraph}{4}{\parindent}%
+  {-.5\baselineskip \@plus -2\p@ \@minus -.2\p@}%
+  {-3.5\p@}%
+  {\@parfont\@adddotafter}}
 \if@ACM@boldparagraph
 \newcommand\basicsubsubsection{\@startsection{subsubsection}{3}{0pt}%
   {-.5\baselineskip \@plus -2\p@ \@minus -.2\p@}%
