--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1776,13 +1776,28 @@ Computing Machinery]
 %   Whether we use bold paragraph and subsubsection headings
 %    \begin{macrocode}
 \define@boolkey+{acmart.cls}[@ACM@]{boldparagraph}[true]{%
-  \if@ACM@oldfonts
+  \if@ACM@boldparagraph
     \PackageInfo{\@classname}{Using bold paragraph and subsubsections headings}%
   \else
     \PackageInfo{\@classname}{Using italic paragraph and subsubsection headings}%
   \fi}{\PackageError{\@classname}{Option boldparagraph can be either true or
     false}}
 \ExecuteOptionsX{boldparagraph=false}
+%    \end{macrocode}
+%
+% \end{macro}
+% \begin{macro}{\if@ACM@fullsizebibfont}
+% \changes{v1.33}{2017/04/26}{Added macro}
+%   Whether we use full font size in bibliography
+%    \begin{macrocode}
+\define@boolkey+{acmart.cls}[@ACM@]{fullsizebibfont}[true]{%
+  \if@ACM@fullsizebibfont
+    \PackageInfo{\@classname}{Using full size font in bibliography}%
+  \else
+    \PackageInfo{\@classname}{Using reduced size font in bibliography}%
+  \fi}{\PackageError{\@classname}{Option fullsizebibfont can be either true or
+    false}}
+\ExecuteOptionsX{fullsizebibfont=false}
 %    \end{macrocode}
 %
 % \end{macro}
@@ -1948,7 +1963,10 @@ Computing Machinery]
      \section*{\refname}%
      \phantomsection\addcontentsline{toc}{section}{\refname}%
   }
+\if@ACM@fullsizebibfont
+\else
   \renewcommand{\bibfont}{\bibliofont}
+\fi
   \renewcommand\setcitestyle[1]{
   \@for\@tempa:=#1\do
   {\def\@tempb{round}\ifx\@tempa\@tempb
