--- a/acmart.dtx
+++ b/acmart.dtx
@@ -234,14 +234,14 @@
 %     \midrule
 %     manuscript  & A manuscript. This is the default \\
 %   acmsmall & Small single column format, used for CIE, CSUR, JACM, JDIQ, JEA, JERIC,
-%            JETC, TAAS, TACCESS, TACO, TALG, TALLIP (formerly TALIP), TCPS,
+%            JETC, PACMPL, TAAS, TACCESS, TACO, TALG, TALLIP (formerly TALIP), TCPS,
 %            TEAC, TECS, TIIS, TISSEC, TIST, TKDD, TMIS, TOCE, TOCHI, TOCL,
 %            TOCS, TOCT, TODAES, TODS, TOIS, TOIT, TOMACS, TOMM (formerly
 %            TOMCCAP), TOMPECS, TOMS, TOPC, TOPLAS, TOPS,
 %            TOS, TOSEM, TOSN, TRETS,
 %            TSAS, TSC, TSLP, TWEB, including special issues. \\
 %           acmlarge  & Large single column format, used for
-%           IMWUT, JOCCH, PACMPL, POMACS, TAP, including special issues. \\
+%           IMWUT, JOCCH, POMACS, TAP, including special issues. \\
 %            acmtog   & Large double column format, used for
 %          TOG, including special issues.\\
 %           sigconf & Proceedings format for most of ACM
