--- a/sample-acmlarge.tex
+++ b/sample-acmlarge.tex
@@ -12,7 +12,7 @@
 \IncMargin{-\parindent}
 
 % Metadata Information
-\acmJournal{POMACS}
+\acmJournal{PACMHCI}
 \acmVolume{9}
 \acmNumber{4}
 \acmArticle{39}
