--- a/acmart.dtx
+++ b/acmart.dtx
@@ -241,7 +241,7 @@
 %            TOS, TOSEM, TOSN, TRETS,
 %            TSAS, TSC, TSLP, TWEB, including special issues. \\
 %           acmlarge  & Large single column format, used for
-%           IMWUT, JOCCH, POMACS, TAP, including special issues. \\
+%           IMWUT, JOCCH, PACMHCI, POMACS, TAP, including special issues. \\
 %            acmtog   & Large double column format, used for
 %          TOG, including special issues.\\
 %           sigconf & Proceedings format for most of ACM
@@ -371,6 +371,7 @@
 %     JERIC & ACM Journal of Educational Resources in Computing\\
 %     JETC & ACM Journal on Emerging Technologies in Computing Systems \\
 %     JOCCH & ACM Journal on Computing and Cultural Heritage \\
+%     PACMHCI & PACM on Human-Computer Interaction\\
 %     PACMPL & PACM on Programming Languages \\
 %     POMACS & PACM on Measurement and Analysis of Computing Systems \\
 %     TAAS & ACM Transactions on Autonomous and Adaptive Systems\\
@@ -2768,6 +2769,7 @@ Computing Machinery]
 % \changes{v1.24}{2016/11/16}{Add IMWUT journal option}
 % \changes{v1.25}{2016/12/03}{Updated PACMPL}
 % \changes{v1.30}{2017/02/15}{Updated IMWUT and PACMPL}
+% \changes{v1.36}{2017/05/13}{Added PACMHCI journal options}
 %
 % We use keyval interface to define journal title and relevant
 % information
@@ -2782,6 +2784,7 @@ Computing Machinery]
   JERIC,%
   JETC,%
   JOCCH,%
+  PACMHCI,%
   PACMPL,%
   POMACS,%
   TAAS,%
@@ -2861,6 +2864,10 @@ Computing Machinery]
 \or % JOCCH
   \def\@journalName{ACM Journal on Computing and Cultural Heritage}%
   \def\@journalName{ACM J. Comput. Cult. Herit.}%
+\or % PACMHCI
+  \def\@journalName{Proceedings of the ACM on Human-Computer Interaction}%
+  \def\@journalName{Proc. ACM Hum.-Comput. Interact.}%
+  \def\@permissionCodeOne{2573-0142}%
 \or % PACMPL
   \def\@journalName{Proceedings of the ACM on Programming Languages}%
   \def\@journalName{Proc. ACM Program. Lang.}%
