--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1586,6 +1586,8 @@ Computing Machinery]
 % \changes{v1.35}{2017/04/23}{BibTeX bug fixed: et al.}
 % \changes{v1.36}{2017/05/12}{Added the possibility to adjust number of
 % author boxes per row in conference formats}
+% \changes{v1.37}{2017/05/13}{Set \cs{normalparindent}; Reduce list
+% indentation (Matthew Fluet)}%
 %
 %
 % And the driver code:
