--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1588,6 +1588,7 @@ Computing Machinery]
 % author boxes per row in conference formats}
 % \changes{v1.37}{2017/05/13}{Set \cs{normalparindent}; Reduce list
 % indentation (Matthew Fluet)}%
+% \changes{v1.38}{2017/05/13}{Increase default font size for SIGPLAN}
 %
 %
 % And the driver code:
@@ -1881,6 +1882,7 @@ Computing Machinery]
 %\label{sec:loading}
 %
 % \changes{v1.13}{2016/06/06}{Increased font size for ACM Large}
+% \changes{v1.38}{2017/05/13}{Increase default font size for SIGPLAN}
 %
 %
 % At this point we either have \cs{ACM@fontsize}, or use defaults
@@ -1900,7 +1902,7 @@ Computing Machinery]
   \or % siggraph
     \def\ACM@fontsize{9pt}%
    \or % sigplan
-    \def\ACM@fontsize{9pt}%
+    \def\ACM@fontsize{10pt}%
    \or % sigchi
     \def\ACM@fontsize{10pt}%
   \or % sigchi-a
