Added \authornotemark command

--- a/README
+++ b/README
@@ -108,9 +108,12 @@ version 1.35    Author-year bib style now uses square brackets.
 Version 1.36    Bug fixes
 		Moved PACMPL to acmlarge format
 		New journal: PACMHCI
-		Added the possibility to adjust number of author boxes per row
-		in conference formats
+		Added the possibility to adjust number of author
+		boxes per row in conference formats
 		
 Version 1.37    Reduce list indentation (Matthew Fluet)
 
 Version 1.38    Increase default font size for SIGPLAN
+
+Version 1.39    Added \authornotemark commmand
+
