--- a/README
+++ b/README
@@ -117,3 +117,4 @@ Version 1.38    Increase default font size for SIGPLAN
 
 Version 1.39    Added \authornotemark commmand
 
+Version 1.40    Bibliography changes
