--- a/sample-bibliography.bib
+++ b/sample-bibliography.bib
@@ -900,6 +900,7 @@ year = {2003},
 
 % grinder
 @inproceedings{2004:ITE:1009386.1010128,
+ key = {IEEE},
  title = {IEEE TCSC Executive Committee},
  booktitle = {Proceedings of the IEEE International Conference on Web Services},
  series = {ICWS '04},
@@ -1520,20 +1521,34 @@ pages = "24--31"}
  title = {A multifrequency MAC specially designed for wireless sensor network applications},
  journal = {ACM Trans. Embed. Comput. Syst.},
  issue_date = {March 2010},
- volume = {9},
- number = {4},
+ volume = 9,
+ number = 4,
  month = {April},
- year = {2010},
+ year = 2010,
  issn = {1539-9087},
  pages = {39:1--39:41},
- articleno = {39},
- numpages = {41},
+ articleno = 39,
+ numpages = 41,
  url = {http://doi.acm.org/10.1145/1721695.1721705},
  doi = {10.1145/1721695.1721705},
- acmid = {1721705},
+ acmid = 1721705,
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {Wireless sensor networks, media access control, multi-channel, radio interference, time synchronization},
 }
 
 
+@online{TUGInstmem,
+  key =          {TUG},
+  year  =        2017,
+  title =        "Institutional members of the {\TeX} Users Group",
+  url =           "http://wwtug.org/instmem.html",
+  lastaccessed = "May 27, 2017",
+}
+
+@online{CTANacmart,
+  author =    {Boris Veytsman},
+  title =  {acmart---{C}lass for typesetting publications of {ACM}},
+  url =    {http://www.ctan.org/pkg/acmart},
+  lastaccessed = {May 27, 2017}
+  }
