--- a/samplebody-journals.tex
+++ b/samplebody-journals.tex
@@ -309,6 +309,8 @@ Boris / Barbara Beeton: multi-volume works as books
 A couple of citations with DOIs: \cite{2004:ITE:1009386.1010128,
   Kirschmer:2010:AEI:1958016.1958018}. 
 
+Online citations: \cite{TUGInstmem, Thornburg01, CTANacmart}.  
+
 % Appendix
 \appendix
 \section{Switching times}
