--- a/acmart.dtx
+++ b/acmart.dtx
@@ -2220,7 +2220,15 @@ Computing Machinery]
 % \end{macro}
 %
 % \begin{macro}{\l@subsection}
-% \changes{v1.31}{2017/03/04}{Rededined macro} 
+% \changes{v1.40}{2017/05/27}{Redefined macro} 
+%   Section spacing is more generous than for amsart
+%    \begin{macrocode}
+\def\l@section{\@tocline{1}{0pt}{1pc}{2pc}{}}
+%    \end{macrocode}
+% \end{macro}
+% 
+% \begin{macro}{\l@subsection}
+% \changes{v1.31}{2017/03/04}{Redefined macro} 
 %   Amsart has too large spacing
 %    \begin{macrocode}
 \def\l@subsection{\@tocline{2}{0pt}{1pc}{3pc}{}}
@@ -2228,7 +2236,7 @@ Computing Machinery]
 %   
 % \end{macro}
 % \begin{macro}{\l@subsubsection}
-% \changes{v1.31}{2017/03/04}{Rededined macro} 
+% \changes{v1.31}{2017/03/04}{Redefined macro} 
 %   Amsart has too large spacing
 %    \begin{macrocode}
 \def\l@subsubsection{\@tocline{2}{0pt}{1pc}{5pc}{}}
