Added diversity to the authors' list

--- a/sample-acmtog.tex
+++ b/sample-acmtog.tex
@@ -47,6 +47,7 @@
 % Title portion
 \title{A Multifrequency MAC Specially Designed for Wireless Sensor
   Network Applications} 
+
 \author{Gang Zhou}
 \orcid{1234-5678-9012-3456}
 \affiliation{%
@@ -56,14 +57,26 @@
   \state{VA}
   \postcode{23185}
   \country{USA}}
-\author{Yafeng Wu}
+\author{Valerie B\'eranger}
 \affiliation{%
-  \institution{University of Virginia}
-  \department{School of Engineering}
-  \city{Charlottesville}
-  \state{VA}
-  \postcode{22903}
-  \country{USA}
+  \institution{Inria Paris-Rocquencourt}
+  \city{Rocquencourt}
+  \country{France}
+}
+\author{Aparna Patel} 
+\affiliation{%
+ \institution{Rajiv Gandhi University}
+ \streetaddress{Rono-Hills}
+ \city{Doimukh} 
+ \state{Arunachal Pradesh}
+ \country{India}}
+\author{Huifen Chan}
+\affiliation{%
+  \institution{Tsinghua University}
+  \streetaddress{30 Shuangqing Rd}
+  \city{Haidian Qu} 
+  \state{Beijing Shi}
+  \country{China}
 }
 \author{Ting Yan}
 \affiliation{%
@@ -165,13 +178,16 @@ multi-channel, radio interference, time synchronization}
 \thanks{This work is supported by the National Science Foundation,
   under grant CNS-0435060, grant CCR-0325197 and grant EN-CS-0329609.
 
-  Author's addresses: G. Zhou, Computer Science Department, College of
-  William and Mary; Y. Wu {and} J. A. Stankovic, Computer Science
-  Department, University of Virginia; T. Yan, Eaton Innovation Center;
-  T. He, Computer Science Department, University of Minnesota; C.
-  Huang, Google; T. F. Abdelzaher, (Current address) NASA Ames
-  Research Center, Moffett Field, California 94035.}
-
+  Authors' addresses: G.~Zhou, Computer Science Department, College of
+  William and Mary, 104 Jameson Rd, Williamsburg, PA 23185, US;
+  V.~B\'eranger, Inria Paris-Rocquencourt, Rocquencourt, France;
+  A.~Patel, Rajiv Gandhi University, Rono-Hills, Doimukh, Arunachal
+  Pradesh, India; H.~Chan, Tsinghua University, 30 Shuangqing Rd,
+  Haidian Qu, Beijing Shi, China; T.~Yan, Eaton Innovation Center,
+  Prague, Czech Republic; T.~He, C.~Huang, J.~A.~Stankovic University
+  of Virginia, School of Engineering Charlottesville, VA 22903, USA;
+  T. F. Abdelzaher, (Current address) NASA Ames Research Center,
+  Moffett Field, California 94035.}
 
 \maketitle
 
