--- a/sample-sigchi.tex
+++ b/sample-sigchi.tex
@@ -70,19 +70,26 @@
   \country{Iceland}}
 \email{larst@affiliation.org}
 
-\author{Lawrence P. Leipuner}
-\affiliation{
-  \institution{Brookhaven Laboratories}
-  \streetaddress{P.O. Box 5000}}
-\email{lleipuner@researchlabs.org}
-
-\author{Sean Fogarty}
+\author{Valerie B\'eranger}
 \affiliation{%
-  \institution{NASA Ames Research Center}
-  \city{Moffett Field}
-  \state{California} 
-  \postcode{94035}}
-\email{fogartys@amesres.org}
+  \institution{Inria Paris-Rocquencourt}
+  \city{Rocquencourt}
+  \country{France}
+}
+\author{Aparna Patel} 
+\affiliation{%
+ \institution{Rajiv Gandhi University}
+ \streetaddress{Rono-Hills}
+ \city{Doimukh} 
+ \state{Arunachal Pradesh}
+ \country{India}}
+\author{Huifen Chan}
+\affiliation{%
+  \institution{Tsinghua University}
+  \streetaddress{30 Shuangqing Rd}
+  \city{Haidian Qu} 
+  \state{Beijing Shi}
+  \country{China}}
 
 \author{Charles Palmer}
 \affiliation{%
