--- a/sample-manuscript.tex
+++ b/sample-manuscript.tex
@@ -38,20 +38,36 @@
  \titlenote{This is a titlenote}
  \subtitle{This is a subtitle}
  \subtitlenote{Subtitle note}
+
 \author{Gang Zhou}
-\authornote{The corresponding author}
 \orcid{1234-5678-9012-3456}
-\email{zhou@uva.edu}
-\author{Yafeng Wu}
-\email{ywu@uva.edu}
-\author{John A. Stankovic}
 \affiliation{%
-  \institution{University of Virginia}
-  \department{School of Engineering}
-  \city{Charlottesville}
+  \institution{College of William and Mary}
+  \streetaddress{104 Jamestown Rd}
+  \city{Williamsburg}
   \state{VA}
-  \postcode{22903}
-  \country{USA}
+  \postcode{23185}
+  \country{USA}}
+\author{Valerie B\'eranger}
+\affiliation{%
+  \institution{Inria Paris-Rocquencourt}
+  \city{Rocquencourt}
+  \country{France}
+}
+\author{Aparna Patel} 
+\affiliation{%
+ \institution{Rajiv Gandhi University}
+ \streetaddress{Rono-Hills}
+ \city{Doimukh} 
+ \state{Arunachal Pradesh}
+ \country{India}}
+\author{Huifen Chan}
+\affiliation{%
+  \institution{Tsinghua University}
+  \streetaddress{30 Shuangqing Rd}
+  \city{Haidian Qu} 
+  \state{Beijing Shi}
+  \country{China}
 }
 \author{Ting Yan}
 \affiliation{%
@@ -60,25 +76,20 @@
   \country{Czech Republic}}
 \author{Tian He}
 \affiliation{%
+  \institution{University of Virginia}
+  \department{School of Engineering}
+  \city{Charlottesville}
+  \state{VA}
+  \postcode{22903}
+  \country{USA}
+}
+\affiliation{%
   \institution{University of Minnesota}
   \country{USA}}
 \author{Chengdu Huang}
-\affiliation{%
-  \institution{Google}
-  \country{USA}}
-\affiliation{%
-  \institution{University of Virginia}
-  \department{School of Engineering}
-  \city{Charlottesville}
-  \state{VA}
-  \postcode{22903}
-  \country{USA}
-}
+\author{John A. Stankovic}
 \author{Tarek F. Abdelzaher}
 \affiliation{%
-  \institution{University of Illinois at Urbana-Champaign}
-  \country{USA}}
-\affiliation{%
   \institution{University of Virginia}
   \department{School of Engineering}
   \city{Charlottesville}
@@ -86,9 +97,8 @@
   \postcode{22903}
   \country{USA}
 }
-\affiliation{%
-  \institution{Google}
-  \country{USA}}
+
+\renewcommand\shortauthors{Zhou, G. et al}
 
 \begin{abstract}
 Multifrequency media access control has been well understood in
@@ -159,12 +169,16 @@ multi-channel, radio interference, time synchronization}
 \thanks{This work is supported by the National Science Foundation,
   under grant CNS-0435060, grant CCR-0325197 and grant EN-CS-0329609.
 
-  Author's addresses: G. Zhou, Computer Science Department, College of
-  William and Mary; Y. Wu {and} J. A. Stankovic, Computer Science
-  Department, University of Virginia; T. Yan, Eaton Innovation Center;
-  T. He, Computer Science Department, University of Minnesota; C.
-  Huang, Google; T. F. Abdelzaher, (Current address) NASA Ames
-  Research Center, Moffett Field, California 94035.}
+  Authors' addresses: G.~Zhou, Computer Science Department, College of
+  William and Mary, 104 Jameson Rd, Williamsburg, PA 23185, US;
+  V.~B\'eranger, Inria Paris-Rocquencourt, Rocquencourt, France;
+  A.~Patel, Rajiv Gandhi University, Rono-Hills, Doimukh, Arunachal
+  Pradesh, India; H.~Chan, Tsinghua University, 30 Shuangqing Rd,
+  Haidian Qu, Beijing Shi, China; T.~Yan, Eaton Innovation Center,
+  Prague, Czech Republic; T.~He, C.~Huang, J.~A.~Stankovic University
+  of Virginia, School of Engineering Charlottesville, VA 22903, USA;
+  T. F. Abdelzaher, (Current address) NASA Ames Research Center,
+  Moffett Field, California 94035.}
 
 
 \maketitle
