More fixes to samples

--- a/samplebody-journals.tex
+++ b/samplebody-journals.tex
@@ -283,7 +283,7 @@ back-off algorithms for the slotted media access design.
 
 % Start of "Sample References" section
 
-\section{Typical references in new ACM Reference Format}
+\section{Typical References in New ACM Reference Format}
 A paginated journal article \cite{Abril07}, an enumerated
 journal article \cite{Cohen07}, a reference to an entire issue \cite{JCohen96},
 a monograph (whole book) \cite{Kosiur01}, a monograph/whole book in a series (see 2a in spec. document)
@@ -313,7 +313,7 @@ Online citations: \cite{TUGInstmem, Thornburg01, CTANacmart}.
 
 % Appendix
 \appendix
-\section{Switching times}
+\section{Switching Times}
 
 In this appendix, we measure the channel switching time of Micaz
 \cite{CROSSBOW} sensor devices.  In our experiments, one mote
@@ -330,7 +330,7 @@ s=\frac{10}{N_{1}}-\frac{10}{N_{2}}.
 By repeating the experiments 100 times, we get the average
 channel-switching time of Micaz motes: 24.3\,$\mu$s.
 
-\section{Supplementary materials}
+\section{Supplementary Materials}
 
 
 \begin{printonly}
@@ -338,7 +338,7 @@ channel-switching time of Micaz motes: 24.3\,$\mu$s.
 \end{printonly}
 
 \begin{screenonly}
-\subsection{This is an example of Appendix subsection head}
+\subsection{This is an Example of Appendix Subsection Head}
 
 Channel-switching time is measured as the time length it takes for
 motes to successfully switch from one channel to another. This
@@ -355,7 +355,7 @@ channels. In both scenarios, the channel-switching time does not have
 obvious changes. (In our experiments, all values are in the range of
 23.6 $\mu$s to 24.9 $\mu$s.)
 
-\subsection{Appendix subsection head}
+\subsection{Appendix Subsection Head}
 
 The primary consumer of energy in WSNs is idle listening. The key to
 reduce idle listening is executing low duty-cycle on nodes. Two
